<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvHistoryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/history_fragment_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnClearHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnClearHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupTimeFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHistoryTitle">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_today"
            android:checkable="true"
            android:checked="true"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_week"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Choice" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_all"
            android:checkable="true"
            style="@style/Widget.MaterialComponents.Chip.Choice" />
    </com.google.android.material.chip.ChipGroup>
    
    <TextView
        android:id="@+id/tvCountInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupTimeFilter"
        tools:text="3 conversiones" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCountInfo"
        tools:listitem="@layout/item_conversion_history" />

    <TextView
        android:id="@+id/tvEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_history"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout> 